--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "discord.js": "^14.13.0",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
+    "nodemon": "^3.0.1",
     "ws": "^8.14.2"
   },
   "scripts": {
